--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "grunt-browserify": "~1.2.8",
     "stylus": "~0.38.0",
     "nodemon": "~0.7.10",
-    "browserify": "~2.33.1"
+    "browserify": "~2.33.1",
+    "grunt-contrib-stylus": "~0.8.0",
+    "grunt-nodemon": "~0.1.1",
+    "grunt-concurrent": "~0.4.0"
   }
 }
