--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "browserify": "~2.33.1",
     "grunt-contrib-stylus": "~0.8.0",
     "grunt-nodemon": "~0.1.1",
-    "grunt-concurrent": "~0.4.0"
+    "grunt-concurrent": "~0.4.0",
+    "mocha": "~1.13.0",
+    "should": "~1.3.0",
+    "express": "~3.4.0"
   }
 }
