--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-concurrent": "~0.4.0",
     "mocha": "~1.13.0",
     "should": "~1.3.0",
-    "express": "~3.4.0"
+    "express": "~3.4.0",
+    "orm": "~2.1.2"
   }
 }
