--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "should": "~1.3.0",
     "express": "~3.4.0",
     "orm": "~2.1.2",
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "orm-timestamps": "~0.1.1"
   }
 }
