changing over to Sequelize and mocking up a post to /items -[WIP]

--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     "mocha": "~1.13.0",
     "should": "~1.3.0",
     "express": "~3.4.0",
-    "orm": "~2.1.2",
-    "grunt": "~0.4.1",
-    "orm-timestamps": "~0.1.1"
+    "grunt": "~0.4.1"
   }
 }
