--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mocha": "~1.13.0",
     "should": "~1.3.0",
     "express": "~3.4.0",
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "sequelize": "~2.0.0-beta.0"
   }
 }
