--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "express": "~3.4.0",
     "grunt": "~0.4.1",
     "sequelize": "~2.0.0-beta.0"
+  },
+  "devDependencies": {
+    "grunt-nodemon": "~0.1.1"
   }
 }
