--- a/package.json
+++ b/package.json
@@ -35,4 +35,7 @@
     "stylus-import-tree": "~0.1.8",
     "connect-mysql-session": "~0.1.3"
   },
+  "devDependencies": {
+    "grunt-nodemon": "~0.1.1"
+  }
 }
