--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "connect-mysql-session": "~0.1.3",
     "cheerio": "~0.12.3",
     "request": "~2.27.0",
-    "q": "~0.9.7"
+    "q": "~0.9.7",
+    "stylus-import-tree": "~0.1.8",
+    "connect-mysql-session": "~0.1.3"
   },
   "devDependencies": {
     "grunt-nodemon": "~0.1.1"
