--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "grunt-contrib-stylus": "~0.8.0",
     "grunt-nodemon": "~0.1.1",
     "grunt-concurrent": "~0.4.0",
-    "mocha": "~1.13.0",
     "should": "~1.3.0",
     "express": "~3.4.0",
     "grunt": "~0.4.1",
@@ -37,10 +36,20 @@
     "cheerio": "~0.12.3",
     "request": "~2.27.0",
     "q": "~0.9.7",
-    "stylus-import-tree": "~0.1.8",
-    "connect-mysql-session": "~0.1.3"
+    "stylus-import-tree": "~0.1.8"
   },
   "devDependencies": {
-    "grunt-nodemon": "~0.1.1"
+    "grunt-nodemon": "~0.1.1",
+    "karma-ng-scenario": "~0.1.0",
+    "karma-script-launcher": "~0.1.0",
+    "karma-firefox-launcher": "~0.1.0",
+    "karma-chrome-launcher": "~0.1.0",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-jasmine": "~0.1.3",
+    "karma-requirejs": "~0.1.0",
+    "karma-coffee-preprocessor": "~0.1.0",
+    "karma-phantomjs-launcher": "~0.1.0",
+    "karma": "~0.10.2",
+    "grunt-karma": "~0.6.2"
   }
 }
