--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "cheerio": "~0.12.3",
     "request": "~2.27.0",
     "q": "~0.9.7",
-    "stylus-import-tree": "~0.1.8"
+    "stylus-import-tree": "~0.1.8",
+    "aws-sdk": "~1.8.1"
   },
   "devDependencies": {
     "grunt-nodemon": "~0.1.1",
