--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "request": "~2.27.0",
     "q": "~0.9.7",
     "stylus-import-tree": "~0.1.8",
-    "aws-sdk": "~1.8.1"
+    "aws-sdk": "~1.8.1",
+    "async": "~0.2.9"
   },
   "devDependencies": {
     "grunt-nodemon": "~0.1.1",
