--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "async": "~0.2.9",
     "superagent": "~0.15.7",
     "expect.js": "~0.2.0",
-    "mysql": "~2.0.0"
+    "mysql": "~2.0.0",
   },
   "devDependencies": {
     "grunt-nodemon": "~0.1.1",
@@ -55,6 +55,6 @@
     "karma-coffee-preprocessor": "~0.1.0",
     "karma-phantomjs-launcher": "~0.1.0",
     "karma": "~0.10.2",
-    "grunt-karma": "~0.6.2"
+    "grunt-karma": "~0.6.2",
   }
 }
