--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "preinstall": "npm install grunt-cli",
+    "start": "grunt"
   },
   "repository": {
     "type": "git",
